--- a/Day12.quiz-app/styles/globals.css
+++ b/Day12.quiz-app/styles/globals.css
@@ -24,3 +24,36 @@ a {
     background: black;
   }
 }
+
+:root {
+  --gray-50: #f7f9fa;
+  --gray-100: #f1f5f9;
+  --gray-200: #e2e8f0;
+  --gray-300: #cccccc;
+  --gray-400: #797f87;
+  --gray-800: #2d3748;
+  --green-300: #5eead4;
+  --green-400: rgb(34, 201, 179);
+  --green-500: #10bca8;
+  --green-600: #14b8a6;
+  --green-900: #262626;
+}
+
+div.radio-wrap {
+  width: 150px;
+  justify-content: start;
+  display: inline-flex;
+  gap: 8px;
+  align-items: center;
+  font-size: 0.9rem;
+}
+
+input[type="radio"] {
+  accent-color: rgb(91, 158, 163);
+}
+
+.title {
+  font-size: 1.25rem;
+  font-weight: 600;
+  color: var(--green-500);
+}
